corrected alignment on some pages

--- a/public/frontEnd/jobs/css/custom.css
+++ b/public/frontEnd/jobs/css/custom.css
@@ -911,7 +911,7 @@ section.main_section_page {
 }
 
 .checkboxtext {
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .upperlineTitle {
@@ -3104,11 +3104,14 @@ ul#supplierList {
   margin-right: 10px;
 }
 
-.nav-link:focus,
-.nav-link:hover {
-  color: #1f88b5;
-}
-
 .bg-light {
   background-color: #f7f7f9 !important;
+}
+
+.sarchBtn {
+  font-size: 12px;
+}
+
+.small_content {
+  font-size: 13px;
 }
